<resources>
    <string name="app_name">cvsi</string>
    <string name="name_text_view">Name</string>
    <string name="surname_text_view">Surname</string>
    <string name="email_text_view">Email</string>
    <string name="password_text">Password</string>
    <string name="password_repeat_edit_text">Confirm Password</string>
    <string name="settings" />
    <string name="action_favorite">Favourite</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_pass_text">Forgot password?</string>
    <string name="confirm_okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="informative_forgot_password">To reset your password, enter the email you used to register to BSCB.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pager">PagerActivity</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="go_to_login">Login</string>
    <string name="go_to_list">Go to product lists</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_buy">Buy</string>
    <string name="action_sell">Sell</string>
    <string name="action_borrow">Borrow</string>
    <string name="lorem_ipsum">Lorepsum Ipsum</string>
    <string name="buy_product">BUY</string>
    <string name="sell_product">SELL</string>
    <string name="borrow_product">BORROW</string>
    <string name="product_title">Product Title</string>
    <string name="prod_description">Description</string>
    <string name="prod_price">Price</string>
    <string name="default_currency">MDL</string>
    <string name="description_text_view"> </string>
    <string name="title_activity_maniak">Maniak</string>
    <string name="msisdn">Phone number</string>
    <string name="username_text_view">Username</string>
    <string name="register_button">Register</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_info">About</string>
    <string name="drawer_item_logout">Log Out</string>


    <!-- Material DEFAULT colors -->
    <color name="material_drawer_primary">#2196F3</color>
    <color name="material_drawer_primary_dark">#1976D2</color>
    <color name="material_drawer_primary_light">#BBDEFB</color>
    <color name="material_drawer_accent">#FF4081</color>

    <!-- OVERWRITE THESE COLORS FOR A LIGHT THEME -->
    <!-- MaterialDrawer DEFAULT colors -->
    <color name="material_drawer_background">#F9F9F9</color>
    <!-- Material DEFAULT text / items colors -->
    <color name="material_drawer_primary_text">#DE000000</color>
    <color name="material_drawer_primary_icon">#8A000000</color>
    <color name="material_drawer_secondary_text">#8A000000</color>
    <color name="material_drawer_hint_text">#42000000</color>
    <color name="material_drawer_divider">#1F000000</color>
    <!-- Material DEFAULT drawer colors -->
    <color name="material_drawer_selected">#E8E8E8</color>
    <color name="material_drawer_selected_text">#2196F3</color>
    <color name="material_drawer_header_selection_text">#FFF</color>

    <!-- OVERWRITE THESE COLORS FOR A DARK THEME -->
    <!-- MaterialDrawer DEFAULT DARK colors -->
    <color name="material_drawer_dark_background">#303030</color>
    <!-- MaterialDrawer DEFAULT DARK text / items colors -->
    <color name="material_drawer_dark_primary_text">#DEFFFFFF</color>
    <color name="material_drawer_dark_primary_icon">#8AFFFFFF</color>
    <color name="material_drawer_dark_secondary_text">#8AFFFFFF</color>
    <color name="material_drawer_dark_hint_text">#42FFFFFF</color>
    <color name="material_drawer_dark_divider">#1FFFFFFF</color>
    <!-- MaterialDrawer DEFAULT DARK drawer colors -->
    <color name="material_drawer_dark_selected">#202020</color>
    <color name="material_drawer_dark_selected_text">@color/material_drawer_primary</color>
    <color name="material_drawer_dark_header_selection_text">#FFF</color>


    <!--<string name="app_name">Material DateTimePicker</string>-->
    <string name="title_activity_main">DateTimePicker Example</string>
    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark_time">Use dark theme</string>
    <string name="mode_dark_date">Use dark theme</string>
    <string name="mode_custom_accent">Use custom accent</string>
    <string name="vibrate_time">Vibrate on touch</string>
    <string name="vibrate_date">Vibrate on touch</string>
    <string name="dismiss_time">Dismiss on pause (eg: orientation change)</string>
    <string name="dismiss_date">Dismiss on pause (eg: orientation change)</string>
    <string name="title_time">Show a title</string>
    <string name="title_date">Show a title</string>
    <string name="show_year_first">Show the year picker first</string>
    <string name="enable_seconds">Show seconds picker</string>
    <string name="enable_minutes">Show minutes picker</string>
    <string name="limit_times">Limit selectable times</string>
    <string name="limit_dates">Limit selectable dates</string>
    <string name="disable_dates">Disable specific dates</string>
    <string name="highlight_dates">Highlight certain dates</string>
    <!--<string name="action_settings">Settings</string>-->


</resources>
