<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item android:id="@+id/action_buy"
        android:title="@string/action_buy"
        android:orderInCategory="100"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>

    <item android:id="@+id/action_sell"
        android:title="@string/action_sell"
        android:orderInCategory="100"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_borrow"
        android:title="@string/action_borrow"
        android:orderInCategory="100"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>