<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context="example.gmariotti.it.test21.ToolbarActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="Search"
        app:showAsAction="ifRoom" />


    <item android:id="@+id/action_buy"
        android:title="@string/action_buy"
        android:orderInCategory="100"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_sell"
        android:title="@string/action_sell"
        android:orderInCategory="100"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/action_borrow"
        android:title="@string/action_borrow"
        android:orderInCategory="100"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

</menu>