<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/toolbar"/>


        </LinearLayout>
        <!--  Header Ends -->

        <!-- Footer starts -->
        <LinearLayout
            android:id="@+id/footer"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true">
        </LinearLayout>

        <!-- Register Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_below="@+id/header">

            <!-- Name label -->
            <TextView
                android:text="@string/name_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24" />

            <EditText
                android:hint="name"
                android:textColor="@color/blackOrange"
                android:id="@+id/name_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

            <!-- Surname -->

            <TextView
                android:text="@string/surname_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24" />

            <EditText
                android:textColor="@color/blackOrange"
                android:id="@+id/surname_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

            <!-- Surname -->

            <TextView
                android:text="@string/username_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24" />

            <EditText
                android:textColor="@color/blackOrange"
                android:id="@+id/username_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

            <!-- Email label -->
            <TextView
                android:text="@string/email_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24" />

            <EditText
                android:textColor="@color/blackOrange"
                android:id="@+id/email_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>

            <!-- MSISDN label -->
            <TextView
                android:text="@string/msisdn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24" />

            <EditText
                android:textColor="@color/blackOrange"
                android:id="@+id/msisdn_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"/>


            <!-- Password Label -->
            <TextView
                android:text="@string/password_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24" />

            <EditText
                android:textColor="@color/blackOrange"
                android:id="@+id/password_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword" />

            <!-- Password confirm label -->
            <TextView
                android:text="@string/password_repeat_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24" />

            <EditText
                android:textColor="@color/blackOrange"
                android:id="@+id/password_repeat_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword" />

            <Button
                android:text="@string/register_button"
                android:id="@+id/register_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>



        </LinearLayout>


    </RelativeLayout>

</ScrollView>