<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_height="match_parent"
    tools:context=".activities.ListItemsActivity">


    <RelativeLayout
        android:theme="@style/toolbarTheme"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:theme="@style/toolbarTheme"
            android:layout_height="wrap_content">

            <include layout="@layout/toolbar" />

        </LinearLayout>
        <!--  Header Ends -->

        <LinearLayout
            android:layout_below="@id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/header"
                android:background="@color/White"
                android:theme="@style/toolbarTheme"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </RelativeLayout>

    <include layout="@layout/navigation_drawer" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_backgroundColor="#ccffffff"
        fab:menu_fab_label="Menu label">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_18dp"
            fab:fab_size="mini"
            fab:fab_label="@string/borrow_product" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_18dp"
            fab:fab_size="mini"
            fab:fab_label="@string/buy_product" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_18dp"
            fab:fab_size="mini"
            fab:fab_label="@string/sell_product" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.v4.widget.DrawerLayout>
