<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--  Header  Starts-->
    <LinearLayout
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:theme="@style/toolbarTheme"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </LinearLayout>
    <!--  Header Ends -->


    <ScrollView
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:theme="@style/toolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/image_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:background="@color/blackOrange"
                    android:src="@drawable/ic_add_a_photo_white_24dp"
                    android:adjustViewBounds="true"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:id="@+id/image_view" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/prod_title_editText"
                    android:hint="@string/product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/prod_description_editText"
                    android:hint="@string/prod_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/prod_price_editText"
                    android:hint="@string/prod_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/title_place"
                android:layout_below="@+id/image_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="7">

                <TextView
                    android:layout_weight="4"
                    android:id="@+id/title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="contact det"
                    android:gravity="center_vertical"
                    android:textSize="14dp"/>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/space_between"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_weight="2"
                    android:text="date"
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RelativeLayout
                android:layout_below="@+id/title_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="10dp"
                    android:layout_marginTop="10dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="Cancel"
            android:background="@drawable/rose_red"
            android:id="@+id/cancel_prod_creation_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <Button
            android:background="@drawable/rose_red"
            android:layout_marginLeft="1px"
            android:text="Create"
            android:id="@+id/create_product_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

    </LinearLayout>
</RelativeLayout>
